# mju-crawler-mcpserver

./: README.md  notices.json  pyproject.toml  requirements.txt  response_from_spider.html  scrapy.cfg  server.py
mju_crawler/: items.py  middlewares.py  pipelines.py  settings.py
mju_crawler/spiders/: mju_spider.py
src/my_server/: server.py
